search card alignment fixed

--- a/src/app/searchdoctor/searchdoctor.component.css
+++ b/src/app/searchdoctor/searchdoctor.component.css
@@ -1,31 +1,34 @@
 .search{
+  width:10%;
   padding-top: 50px;
 }
 
 .mat-form-field{
-
   width: 100%;
-
 }
 
 .myrow{
  height: 100px;
 }
 
+.resultrow{
+  padding-left: 20px;
+}
 .mycolumn{
-  padding: 10px;
+padding: 10px;
+padding-left: 20px;
 }
 
 .column{
-  width: 75%;
+  width: 55%;
   padding-top: 50px;
 
 }
 
 .example-card {
-  max-width: 300px;
+  width: 400px;
   transform: scale(1);
-    transform: transition 0.5s ease;
+  transform: transition 0.5s ease;
 }
 
 .example-header-image {
